change to adpater upload torrent file feature

--- a/static/files/template/omni.html
+++ b/static/files/template/omni.html
@@ -39,7 +39,7 @@
 <!-- OMNI BAR -->
 <div class="omni ui fluid icon input">
   <input
-    placeholder="Enter search query, torrent URL or magnet URI"
+    placeholder="Enter search query, torrent URL, magnet URI or upload from right button"
     ng-model="inputs.omni"
     ng-change="parse()"
     ng-enter="submitOmni()"/>
