--- a/static/files/css/sections/omni.css
+++ b/static/files/css/sections/omni.css
@@ -73,3 +73,17 @@
 .upload-icon input {
 	display: none;
 }
+
+#dropper {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+#dropper.dragging {
+	opacity: 0.5;
+	background: lightblue;
+	z-index: 100;
+}
